--- a/src/userinterface/SystemAdminWorkArea/SystemAdminWorkAreaJPanel.form
+++ b/src/userinterface/SystemAdminWorkArea/SystemAdminWorkAreaJPanel.form
@@ -1,14 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 
 <Form version="1.7" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JPanelFormInfo">
-<<<<<<< Updated upstream
-=======
-  <Properties>
-    <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-      <Dimension value="[1000, 1000]"/>
-    </Property>
-  </Properties>
->>>>>>> Stashed changes
   <AuxValues>
     <AuxValue name="FormSettings_autoResourcing" type="java.lang.Integer" value="0"/>
     <AuxValue name="FormSettings_autoSetComponentName" type="java.lang.Boolean" value="false"/>
@@ -78,7 +70,7 @@
             <Property name="useNullLayout" type="boolean" value="true"/>
           </Layout>
           <SubComponents>
-            <Component class="javax.swing.JLabel" name="SystemAWALabel1">
+            <Component class="javax.swing.JLabel" name="jLabel2">
               <Properties>
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Times New Roman" size="24" style="1"/>
@@ -88,16 +80,15 @@
               </Properties>
               <Constraints>
                 <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-<<<<<<< Updated upstream
                   <AbsoluteConstraints x="243" y="11" width="150" height="31"/>
-=======
-                  <AbsoluteConstraints x="550" y="30" width="310" height="70"/>
->>>>>>> Stashed changes
                 </Constraint>
               </Constraints>
             </Component>
-            <Component class="javax.swing.JButton" name="SystemAWACustomerButton">
+            <Component class="javax.swing.JButton" name="btnManageCustomersSAWAP">
               <Properties>
+                <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+                  <Color blue="ff" green="ff" red="ff" type="rgb"/>
+                </Property>
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Times New Roman" size="12" style="1"/>
                 </Property>
@@ -109,20 +100,19 @@
                 </Property>
               </Properties>
               <Events>
-                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="SystemAWACustomerButtonActionPerformed"/>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnManageCustomersSAWAPActionPerformed"/>
               </Events>
               <Constraints>
                 <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-<<<<<<< Updated upstream
                   <AbsoluteConstraints x="10" y="95" width="130" height="35"/>
-=======
-                  <AbsoluteConstraints x="260" y="180" width="130" height="90"/>
->>>>>>> Stashed changes
                 </Constraint>
               </Constraints>
             </Component>
-            <Component class="javax.swing.JButton" name="SystemAWAPharmacyButton">
+            <Component class="javax.swing.JButton" name="btnManagePharmacySAWAP">
               <Properties>
+                <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+                  <Color blue="ff" green="ff" red="ff" type="rgb"/>
+                </Property>
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Times New Roman" size="12" style="1"/>
                 </Property>
@@ -134,19 +124,15 @@
                 </Property>
               </Properties>
               <Events>
-                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="SystemAWAPharmacyButtonActionPerformed"/>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnManagePharmacySAWAPActionPerformed"/>
               </Events>
               <Constraints>
                 <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-<<<<<<< Updated upstream
                   <AbsoluteConstraints x="10" y="179" width="130" height="35"/>
-=======
-                  <AbsoluteConstraints x="550" y="180" width="130" height="80"/>
->>>>>>> Stashed changes
                 </Constraint>
               </Constraints>
             </Component>
-            <Component class="javax.swing.JButton" name="SystemAWASupplierButton">
+            <Component class="javax.swing.JButton" name="BtnManageSupplier">
               <Properties>
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Times New Roman" size="12" style="1"/>
@@ -159,31 +145,23 @@
                 </Property>
               </Properties>
               <Events>
-                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="SystemAWASupplierButtonActionPerformed"/>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="BtnManageSupplierActionPerformed"/>
               </Events>
               <Constraints>
                 <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-<<<<<<< Updated upstream
                   <AbsoluteConstraints x="10" y="278" width="130" height="37"/>
-=======
-                  <AbsoluteConstraints x="880" y="180" width="130" height="80"/>
->>>>>>> Stashed changes
                 </Constraint>
               </Constraints>
             </Component>
-            <Component class="javax.swing.JLabel" name="SystemAWALabel">
+            <Component class="javax.swing.JLabel" name="jLabel3">
               <Properties>
                 <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                  <Image iconType="3" name="/icon/SystemAdminWorkAreaJPanel.jpg"/>
+                  <Image iconType="3" name="/icon/Manage_WORK_AREA_FINAL.jpg"/>
                 </Property>
               </Properties>
               <Constraints>
                 <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-<<<<<<< Updated upstream
-                  <AbsoluteConstraints x="200" y="-90" width="1500" height="910"/>
-=======
-                  <AbsoluteConstraints x="250" y="150" width="1500" height="910"/>
->>>>>>> Stashed changes
+                  <AbsoluteConstraints x="0" y="0" width="1500" height="910"/>
                 </Constraint>
               </Constraints>
             </Component>
